# buyi-todo

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
